--- a/docs/components/doc-sections/en/connectors.html
+++ b/docs/components/doc-sections/en/connectors.html
@@ -3,7 +3,7 @@
         title="Help us improve this documentation on github!" class="edit-content"><span
             class="fa fa-pencil"></span></a>
 
-    <h1> <a id="connectors" href="#connectors"> Connectors </a> </h1>
+    <h1> <a id="connectors"> Connectors </a> </h1>
     <p>
         A connector is a class object that is associated with <i class="note mark-el">Easy</i> making it able to make
         outside requests using built-in methods and simple commands. When it is imported it also creates an instance
@@ -17,7 +17,7 @@
         </p>
     </div>
 
-    <h3> <a id="conn_methods" href="#conn_methods"> Methods </a> </h3>
+    <h3> <a id="conn_methods"> Methods </a> </h3>
     <p>
         Each easy instance has 5 methods that can be used to execute certain method in the connector instance,
         which are:
@@ -204,13 +204,13 @@
     }
     </code></pre>
 
-    <h3> <a id="conn_commands" href="#conn_commands"> <b>Commands</b> </a> </h3>
+    <h3> <a id="conn_commands"> <b>Commands</b> </a> </h3>
     <p>
         These are commands that can be used with a connector in HTML elements, performing <i
             class="note mark-el">read</i> request or <i class="note mark-el">getOne</i> request.
     </p>
 
-    <h4> <a id="conn_c_tmp" href="#conn_c_tmp"> e-tmp </a> </h4>
+    <h4> <a id="conn_c_tmp"> e-tmp </a> </h4>
     <p>
         It's short of e-template, performs read request according to the path provided and render all the results after
         the request is completed.
@@ -225,7 +225,7 @@
     &lt;/ul&gt;
     </code></pre>
 
-    <h4> <a id="conn_c_tmp_w_filter" href="#conn_c_tmp_w_filter"> e-tmp with e-id </a> </h4>
+    <h4> <a id="conn_c_tmp_w_filter"> e-tmp with e-id </a> </h4>
     <p>
         Performs read request according to the path provided, adding the value of <i class="note mark-el">e-id</i>
         attribute to extra parameter.
@@ -248,7 +248,7 @@
         </p>
     </div>
 
-    <h4> <a id="conn_c_tmp_w_filter" href="#conn_c_tmp_w_filter"> e-tmp with e-filter </a> </h4>
+    <h4> <a id="conn_c_tmp_w_filter"> e-tmp with e-filter </a> </h4>
     <p>
         The list of values returned can also be filtered using e-filter command, the filter expression is
         the same of the <i class="note mark-el">e-for</i> filter, it accepts all the diferents filters
@@ -264,7 +264,7 @@
     &lt;/ul&gt;
     </code></pre>
 
-    <h4> <a id="conn_c_tmp_w_order" href="#conn_c_tmp_w_order"> e-tmp with e-order </a> </h4>
+    <h4> <a id="conn_c_tmp_w_order"> e-tmp with e-order </a> </h4>
     <p>
         The list of values returned can also be ordered e-order command, the order expression is
         the same of the <i class="note mark-el">e-for</i> order.
@@ -279,7 +279,7 @@
     &lt;/ul&gt;
     </code></pre>
 
-    <h4> <a id="conn_c_fill" href="#conn_c_fill"> e-fill with e-id </a> </h4>
+    <h4> <a id="conn_c_fill"> e-fill with e-id </a> </h4>
     <p>
         Performs getOne request according to the path provided and render the result after the
         request is completed. The syntax is <i class="note mark-el">e-fill="path"</i>.
@@ -295,7 +295,7 @@
     &lt;/div&gt;
     </code></pre>
 
-    <h4> <a id="conn_c_req" href="#conn_c_req"> e-req </a> </h4>
+    <h4> <a id="conn_c_req"> e-req </a> </h4>
     <p>
         It's short of e-request, this is the versatile command, whicch can perform
         <i class="note mark-el">e-tmp (read)</i> or <i class="note mark-el">e-fill (getOne)</i>
@@ -363,7 +363,7 @@
         </p>
     </div>
 
-    <h4> <a id="conn_c_use" href="#conn_c_use"> e-use </a> </h4>
+    <h4> <a id="conn_c_use"> e-use </a> </h4>
     <p>
         This command is used to create a variable containing the request result. When used with <i
             class="mark-el">e-tmp</i> or <i class="mark-el">e-req:'many'</i> creates for each result, and when used with
@@ -379,13 +379,13 @@
     &lt;/ul&gt;
     </code></pre>
 
-    <h3> <a id="conn_available" href="#conn_available"> Available </a> </h3>
+    <h3> <a id="conn_available"> Available </a> </h3>
     <p>
         All the available connectors can be found in the connectors folder, and they can be downloaded using the <a
         on:click="showModal" class="note mark-el">download modal</a>.
     </p>
 
-    <h4> <a id="conn_ajax" href="#conn_ajax"> Ajax </a> </h4>
+    <h4> <a id="conn_ajax"> Ajax </a> </h4>
     <p>
         The file easy.ajax.js, has the connector that allows <i class="note mark-el">Easy.js</i> to make ajax request.
         It is very simple to
@@ -453,7 +453,7 @@
         </p>
     </div>
 
-    <h3> <a id="conn_free" href="#conn_free"> Free </a> </h3>
+    <h3> <a id="conn_free"> Free </a> </h3>
     <p>
         The file easy.free.js is a connector struture that is used to create another connectors, meaning that any one
         can create his own connector based on this file.
