--- a/docs/components/doc-sections/en/delimiters.html
+++ b/docs/components/doc-sections/en/delimiters.html
@@ -2,7 +2,7 @@
     <a href="https://github.com/AfonsoMatElias/easy/blob/6a729b7284758c6064eaadb4dc6b23fde4081aaf/docs/components/doc-sections/en/delimiters.html" 
     title="Help us improve this documentation on github!" class="edit-content"><span class="fa fa-pencil"></span></a>
 
-    <h1> <a id="delimiters" href="#delimiters"> Delimiters </a> </h1>
+    <h1> <a id="delimiters"> Delimiters </a> </h1>
 
     <p>
         By default Easy brings two types of delimiters, which are the 
@@ -23,13 +23,13 @@
             class="note mark-el">JSON</a>.
     </p>
 
-    <h3> <a id="dlm_easy" href="#dlm_easy"> Easy </a> </h3>
+    <h3> <a id="dlm_easy"> Easy </a> </h3>
 
     <p e-ignore>
         To use this delimiter just do the following: <span class="note"> -e- [Content] - </span>
     </p>
 
-    <h3> <a id="dlm_easy" href="#dlm_common"> Common </a> </h3>
+    <h3> <a id="dlm_easy"> Common </a> </h3>
 
     <p e-ignore>
         To use this delimiter just do the following: <span class="note"> {{ [Content] }} </span>
