--- a/docs/components/doc-sections/en/extra.html
+++ b/docs/components/doc-sections/en/extra.html
@@ -78,7 +78,7 @@
     &lt;/ul&gt;
     </code></pre>
 
-    <p class="show-case"> Want to learn more? Follow on <a class="mark-el" href="connectors.html"> Connectors </a></p>
+    <p class="show-case"> Want to learn more? Follow on <a class="mark-el" href="docs.connectors.html"> Connectors </a></p>
 </section>
 <script>
     this.mounted = function (el) {
