--- a/docs/components/doc-sections/en/installation.html
+++ b/docs/components/doc-sections/en/installation.html
@@ -3,13 +3,13 @@
         title="Help us improve this documentation on github!" class="edit-content"><span
             class="fa fa-pencil"></span></a>
 
-    <h1> <a id="installation" href="#installation"> Installation </a> </h1>
+    <h1> <a id="installation"> Installation </a> </h1>
     <p>
         It is easily added to a web project, just like the other libraries and framework, and
         for that there are two ways.
     </p>
 
-    <h3> <a id="install_local" href="#install_local"> Locally </a> </h3>
+    <h3> <a id="install_local"> Locally </a> </h3>
     <p>
         To use it locally, we need to download the file and import it
     </p>
@@ -24,7 +24,7 @@
 
     <p> Or, you can use... </p>
 
-    <h3> <a id="install_cdn" href="#install_cdn"> CDN </a> </h3>
+    <h3> <a id="install_cdn"> CDN </a> </h3>
     <p>
         Using <a href="https://www.cloudflare.com/learning/cdn/what-is-a-cdn/" target="_blank" class="mark-a"
             rel="noopener noreferrer">CDN</a>
