--- a/docs/components/doc-sections/en/introduction.html
+++ b/docs/components/doc-sections/en/introduction.html
@@ -2,9 +2,9 @@
     <a href="https://github.com/AfonsoMatElias/easy/blob/6a729b7284758c6064eaadb4dc6b23fde4081aaf/docs/components/doc-sections/en/introduction.html" 
         title="Help us improve this documentation on github!" class="edit-content"><span class="fa fa-pencil"></span></a>
 
-    <h1> <a id="intro" href="#intro"> Introduction </a> </h1>
+    <h1> <a id="intro"> Introduction </a> </h1>
 
-    <h3> <a id="what" href="#what"> What is Easy.js? </a> </h3>
+    <h3> <a id="what"> What is Easy.js? </a> </h3>
     <p>
         Easy.js, short for <span style="color:var(--easy-yellow)">Easy</span>
         and <span style="color:var(--easy-black)">Asyncronous Javascript</span>,
@@ -13,7 +13,7 @@
         between user interfaces and Javascript data.
     </p>
 
-    <h3> <a id="why" href="#why"> So, Why Easy.js? </a> </h3>
+    <h3> <a id="why"> So, Why Easy.js? </a> </h3>
     <p>
         As the name says, it is a javascript library really easy to use that provides
         to you a simple way to interact with your HTML by using Reactive Properties,
@@ -23,14 +23,14 @@
         DOM to handle all the data changes.
     </p>
 
-    <h3> <a id="compatibility" href="#compatibility"> Browsers Compatibility </a> </h3>
+    <h3> <a id="compatibility"> Browsers Compatibility </a> </h3>
     <p>
         It was tested in almost every popular browsers and IE 11, below that is not suported,
         because it uses some comcepts of <a href="https://caniuse.com/#feat=es6" class="mark-el">
             ECMAScript 2015 (ES6) </a>.
     </p>
 
-    <h3> <a id="scale" href="#scale"> Scale of Projects </a> </h3>
+    <h3> <a id="scale"> Scale of Projects </a> </h3>
     <p>
         A web application fully developed with easy.js was tested only with small projects,
         larger projects was not tested yet.
