--- a/docs/components/doc-sections/en/routing.html
+++ b/docs/components/doc-sections/en/routing.html
@@ -2,14 +2,14 @@
     <a href="https://github.com/AfonsoMatElias/easy/blob/6a729b7284758c6064eaadb4dc6b23fde4081aaf/docs/components/doc-sections/en/routing.html" 
     title="Help us improve this documentation on github!" class="edit-content"><span class="fa fa-pencil"></span></a>
 
-    <h1> <a id="routing" href="#routing"> Routing </a> </h1>
+    <h1> <a id="routing"> Routing </a> </h1>
     <p>
         The routing funcionality that enable the <b>Single Page Application</b> mode, and creating a SPA with
         <i class="note">Easy</i> is very simple, because it uses
-        <a href="#comps_incs" class="note mark-el">includer</a> elements.
+        <a class="note mark-el">includer</a> elements.
     </p>
 
-    <h3> <a id="routing_setting" href="#routing_setting"> Setting </a> </h3>
+    <h3> <a id="routing_setting"> Setting </a> </h3>
     <p>
         In the routing, the element where the components started to be rendered must be specified, for this,
         the <i class="note mark-el">route-view</i> directive is used, and in the definition of the components,
@@ -118,7 +118,7 @@
         </p>
     </div>
 
-    <h3> <a id="routing_navegation" href="#routing_navegation"> Navegation </a> </h3>
+    <h3> <a id="routing_navegation"> Navegation </a> </h3>
     <p>
         Navigation between pages is done using the tag element <i class="note mark-el">a</i> but with
         the attribute <i class="note mark-el">:href</i> or <i class="note mark-el">i:href</i>,
@@ -148,7 +148,7 @@
     &lt;a href="/my-project/home"&gt; Home &lt;/a&gt;
     </code></pre>
 
-    <h3> <a id="routing_nesting" href="#routing_nesting"> Nesting Routes </a> </h3>
+    <h3> <a id="routing_nesting"> Nesting Routes </a> </h3>
     <p>
         Children can be added to each component, this in the children property, and so we can nest routes...
         The property expects an component element object having the child's nameId and its object.
@@ -188,7 +188,7 @@
         </p>
     </div>
 
-    <h3> <a id="routing_params" href="#routing_params"> Route Params </a> </h3>
+    <h3> <a id="routing_params"> Route Params </a> </h3>
     <p>
         To define a parameter on the route, we use: paramName and to extract the data of the route's parameters,
         we use <i class="note mark-el">this.getParams()</i> in the component instance, returning an object
@@ -206,7 +206,7 @@
     &lt;/script&gt;
     </code></pre>
 
-    <h3> <a id="routing_pretty_url" href="#routing_pretty_url"> HTML5 Mode / Pretty URL </a> </h3>
+    <h3> <a id="routing_pretty_url"> HTML5 Mode / Pretty URL </a> </h3>
     <p>
         The default navegation mode is hash mode, which uses a URL hash to navigate between pages without reloading it.
     </p>
