--- a/docs/components/main.html
+++ b/docs/components/main.html
@@ -8,7 +8,7 @@
             <div class="main-text">
                 <p class="high-text" e-content="{{ app.version }}"> version </p>
                 <p class="high-text"> Simpler & Cooler </p>
-                <a href="docs.page.1.html" class="high-btn"> Get Started </a>
+                <a href="docs.html" class="high-btn"> Get Started </a>
             </div>
         </div>
     </div>
@@ -113,7 +113,7 @@
         <div class="center-content">
             <div class="main-text">
                 <h3> Want to Learn more? </h3>
-                <a href="docs.page.1.html" class="high-btn"> Get Started </a>
+                <a href="docs.html" class="high-btn"> Get Started </a>
             </div>
         </div>
     </div>
