--- a/docs/components/top.html
+++ b/docs/components/top.html
@@ -14,8 +14,8 @@
         </div>
         <ul e-class="{ 'top-menu-opened': menuOpened }">
             <li> <a :href="/tutorial"> Tutorial </a> </li>
-            <li> <a href="docs.page.1.html"> Docs </a> </li>
-            <li> <a href="connectors.html"> Connectors </a> </li>
+            <li> <a href="docs.html"> Docs </a> </li>
+            <li> <a href="docs.connectors.html"> Connectors </a> </li>
             <li class="hide-it"> <span class="text"> Translations </span> <span class="fa fa-dot-circle-o dot"></span>
             </li>
             <li> <a on:click="showModal">Download</a> </li>
