--- a/docs/components/doc-sections/en/bindings.html
+++ b/docs/components/doc-sections/en/bindings.html
@@ -2,9 +2,9 @@
     <a href="https://github.com/AfonsoMatElias/easy/blob/6a729b7284758c6064eaadb4dc6b23fde4081aaf/docs/components/doc-sections/en/bindings.html" 
         title="Help us improve this documentation on github!" class="edit-content"><span class="fa fa-pencil"></span></a>
 
-    <h1> <a id="bindings" href="#bindings"> Bindings </a> </h1>
+    <h1> <a id="bindings"> Bindings </a> </h1>
 
-    <h3> <a id="bind_one_way" href="#bind_one_way"> One Way </a> </h3>
+    <h3> <a id="bind_one_way"> One Way </a> </h3>
     <p>
         We can achieve One Way Data Binding simply by defining the delimiter in the space or
         attribute we need the value to be.
@@ -52,7 +52,7 @@
     &lt;/div&gt;
     </code></pre>
 
-    <h3> <a id="bind_two_way" href="#bind_two_way"> Two Way </a> </h3>
+    <h3> <a id="bind_two_way"> Two Way </a> </h3>
     <p>
         We can achieve Two Way Data Binding using the command <span
             class="note mark-el">e-bind:<i>property</i>="dataProperty"</span>,
